# ddog

./: CHANGELOG.md  Cargo.toml  README.md  release-please-config.json
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit
src/: cli.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs  output.rs  time.rs
src/cli/: args.rs  logs.rs  metrics.rs  mod.rs  shared.rs  spans.rs
src/client/: logs.rs  metrics.rs  mod.rs  spans.rs
src/commands/: list_metrics.rs  logs.rs  metrics.rs  mod.rs  spans.rs
src/commands/logs/: mod.rs  search.rs
src/commands/metrics/: list.rs  mod.rs  query.rs
src/commands/spans/: mod.rs  search.rs
tests/: integration_tests.rs
