[package]
name = "dd-search"
version = "0.1.0"
edition = "2024"
description = "CLI tool for querying Datadog logs and APM spans"

[dependencies]
# CLI parsing
clap = { version = "4.4", features = ["derive"] }

# Datadog API client
datadog-api-client = "0.23"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Streaming support for pagination
futures-util = "0.3"

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
