[package]
name = "ddog"
version = "0.1.0"
edition = "2024"
description = "CLI tool for querying Datadog logs, APM spans, and metrics"

[lib]
name = "ddog"
path = "src/lib.rs"

[[bin]]
name = "ddog"
path = "src/main.rs"

[dependencies]
# CLI parsing
clap = { version = "4.4", features = ["derive"] }

# Datadog API client
datadog-api-client = "0.23"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Streaming support for pagination
futures-util = "0.3"

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# URL encoding for Datadog UI links
urlencoding = "2.1"

[dev-dependencies]
# Time handling for integration tests
chrono = "0.4"
# Git hooks for pre-commit checks
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
# Serial test execution for environment variable tests
serial_test = "3"
